--- a/ImageTransformer/TestImageTransformer/TestImageTransformer.csproj
+++ b/ImageTransformer/TestImageTransformer/TestImageTransformer.csproj
@@ -61,10 +61,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="TestEdgeDetectionBLL.cs" />
-    <Compile Include="TestFilterBLL.cs" />
+    <Compile Include="TestBusiness\TestEdgeDetectionBLL.cs" />
+    <Compile Include="TestBusiness\TestFilterBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestGetAndSaveImage.cs" />
+    <Compile Include="TestBusiness\TestGetAndSaveImage.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
