--- a/ImageTransformer/ImageTransformer/ImageTransformer.csproj
+++ b/ImageTransformer/ImageTransformer/ImageTransformer.csproj
@@ -46,8 +46,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Business\EdgeDetectionBLL.cs" />
-    <Compile Include="Business\FilterBLL.cs" />
+    <Compile Include="Business\EdgeDetection.cs" />
+    <Compile Include="Business\Filter.cs" />
     <Compile Include="Business\GetAndSaveImage.cs" />
     <Compile Include="Business\Matrix.cs" />
     <Compile Include="IOFiles\ImageManagerFile.cs" />
