--- a/ImageTransformer/TestImageTransformer/TestImageTransformer.csproj
+++ b/ImageTransformer/TestImageTransformer/TestImageTransformer.csproj
@@ -61,8 +61,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="TestBusiness\TestEdgeDetectionBLL.cs" />
-    <Compile Include="TestBusiness\TestFilterBLL.cs" />
+    <Compile Include="TestBusiness\TestEdgeDetection.cs" />
+    <Compile Include="TestBusiness\TestFilter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestBusiness\TestGetAndSaveImage.cs" />
   </ItemGroup>
